Fixed arrow in taskbar/collapse

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -61,19 +61,19 @@ main {
 }
 
 .base-image-2 {
-  top: 20px
+  top: 20px;
 }
 
 .collapseButton.collapsed:hover .base-image-1 {
-  transform: translateY(0px) rotate(-20deg) translateZ(0px);
+  transform: translateY(0.15rem) rotate(-15deg) translateZ(0px);
 }
 .collapseButton.collapsed:hover .base-image-2 {
-  transform: translateY(0px) rotate(20deg) translateZ(0px);
+  transform: translateY(0.1rem) rotate(15deg) translateZ(0px);
 }
 
 .collapseButton:not(collapsed):hover .base-image-1 {
-  transform: translateY(0px) rotate(20deg) translateZ(0px);
+  transform: translateY(0.15rem) rotate(15deg) translateZ(0px);
 }
 .collapseButton:not(collapsed):hover .base-image-2 {
-  transform: translateY(0px) rotate(-20deg) translateZ(0px);
+  transform: translateY(0.1rem) rotate(-15deg) translateZ(0px);
 }
